cluster/apps/security/lldap/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap-external-svc
  namespace: security
spec:
  type: LoadBalancer
  selector:                                                                                                                                                                                       │                                                                                                                                                             │
    app.kubernetes.io/name: lldap
  ports:
    - name: ldap                                                                                                                                                                                    │
      port: 389                                                                                                                                                                                     │
      protocol: TCP                                                                                                                                                                                 │
      targetPort: 389
