cluster/apps/security/lldap/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap-ingress
  namespace: security
  annotations:
    hajimari.io/icon: simple-icons:springsecurity
    hajimari.io/enable: true
    hajimari.io/appName: "lldap"
    hajimari.io/group: "Security"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: &host "lldap.${SECRET_LOCAL_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lldap
            port:
              number: 80
  tls:
  - hosts: 
    - *host
    secretName: lldap-ingress-certs
